@@ -48,7 +48,6 @@ class OpenSSLProject(MakeProject):
         }
 
         openssl_arch = openssl_archs[toolchain.arch]
-        cross_compile_prefix = toolchain.toolchain_arch + '-'
 
         subprocess.check_call(['./Configure',
                                'no-shared',
@@ -57,7 +56,6 @@ class OpenSSLProject(MakeProject):
                                'no-tests',
                                'no-asm', # "asm" causes build failures on Windows
                                openssl_arch,
-                               '--cross-compile-prefix=' + cross_compile_prefix,
                                '--prefix=' + toolchain.install_prefix],
                               cwd=src, env=toolchain.env)
         MakeProject.build(self, toolchain, src)
